.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:14:22 **** Incremental Build of configuration Debug for project Tp2_Finally ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -o Tp2_Finally.exe "src\\Tp2_Finally.o" "src\\arrayPassenger.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Tp2_Finally
14:19:18 **** Incremental Build of configuration Debug for project Tp2_Finally ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tp2_Finally.o" "..\\src\\Tp2_Finally.c" 
..\src\Tp2_Finally.c: In function 'main':
..\src\Tp2_Finally.c:17:2: error: too many arguments to function 'harcodeo'
  harcodeo(pasajero,TAM);
  ^~~~~~~~
In file included from ..\src\Tp2_Finally.c:7:0:
..\src\Arraypassenger.h:34:5: note: declared here
 int harcodeo(Passenger* p1);
     ^~~~~~~~
14:19:42 **** Incremental Build of configuration Debug for project Tp2_Finally ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Tp2_Finally.o" "..\\src\\Tp2_Finally.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\arrayPassenger.o" "..\\src\\arrayPassenger.c" 
gcc -o Tp2_Finally.exe "src\\Tp2_Finally.o" "src\\arrayPassenger.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Tp2_Finally
14:23:00 **** Incremental Build of configuration Debug for project Tp2_Finally ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\arrayPassenger.o" "..\\src\\arrayPassenger.c" 
gcc -o Tp2_Finally.exe "src\\Tp2_Finally.o" "src\\arrayPassenger.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Tp2_Finally
